fixed horizontal scroll in mobile

--- a/css/main.css
+++ b/css/main.css
@@ -685,4 +685,7 @@ footer{
 	.intro-1{
 		font-size: 20px;
 	}
+  span#role {
+      font-size: 20px;
+  }
 }
